fix_spacing_between_elements

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -740,7 +740,7 @@ body {
     font-size: 1.2rem;
   }
   .horror__container__bg {
-    height: 100vh;
+    height: 90vh;
   }
   .horror__desc .sub-heading {
     font-size: 1.5rem;
